# tasks

./: .prettierrc.json  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.js
api/: config.py
api/migrations/: alembic.ini
api/migrations/versions/: 2023-07-29_223418_51eaf196b3e8_initialize.py  2023-11-18_122104_3849c95f1a22_settings.py
api/src/: constants.py  main.py  models.py  utils.py
api/src/blueprints/projects/: schemas.py  services.py  views.py
api/src/blueprints/settings/: schemas.py  services.py  views.py
api/src/blueprints/tasks/: schemas.py  services.py  views.py
api/src/blueprints/wages/: schemas.py  services.py  views.py
api/src/core/: models.py  schemas.py
api/src/extensions/: __init__.py
api/src/extensions/alchemical/: errors.py  models.py
api/src/extensions/marshmallow_dataclass/: schemas.py
src/: App.vue  constants.js  main.js  style.css  utils.js
src/components/atoms/: Checkbox.vue  Input.vue  Label.vue  Switch.vue
src/components/molecules/: Input.vue  Navigation.vue
src/components/molecules/project/: ProjectAdd.vue  ProjectCreate.vue  ProjectForm.vue  ProjectItem.vue  ProjectPay.vue  ProjectRemove.vue  ProjectSkeleton.vue  ProjectWage.vue  ProjectWageForm.vue  ProjectWageRemove.vue  ProjetEdit.vue
src/components/organisms/: ProjectCard.vue  ProjectList.vue  Settings.vue  TaskCard.vue  TaskList.vue  Toast.vue  WageCard.vue
src/routers/: index.js
src/stores/: global.js  project.js  settings.js  task.js  toast.js  wage.js
src/views/: Page.vue  Wages.vue
(+11 files in other folders)
